2023-06-21  K. Handa  <handa@gnu.org>

	* *.[ch]: Change encoding of all source files from EUC-JP to UTF-8.

	* m17n-core.h, language.c: Fix doxygen tag.

2023-05-09  Mike FABIAN  <mfabian@redhat.com>

	Version 1.8.2 released.

	* m17n-core.h (M17NLIB_PATCH_LEVEL: Changed to 2.
	(

2023-05-05  Mike FABIAN  <mfabian@redhat.com>

	Version 1.8.1 released.

	* m17n-core.h (M17NLIB_PATCH_LEVEL): Changed to 2.
	(M17NLIB_VERSION_NAME): changed to "1.8.2"

2023-05-04  Florian Weimer  <fweimer@redhat.com>

	* example/medit.c: Add missing int (Savannah bug #64106)

2020-03-08  handa  <handa@gnu.org>

	* mtext.c: Fix typo.

2019-06-18  Werner LEMBERG <wl@gnu.org>

	* m17n-core.c (m17n_object_unref): Fix typo.

2019-05-01  Mike FABIAN  <mfabian@redhat.com>

	* m17n-core.c (m17n_object_unref): Avoid crash even if the given
	OBJECT is null.

2018-10-22  K. Handa  <handa@gnu.org>

	* chartab.c (dump_sub_chartab): Use %p directive to print a
	pointer value.

2018-02-08  K. Handa  <handa@gnu.org>

	Version 1.8.0 released.

	* m17n-core.h (M17NLIB_MINOR_VERSION): Changed to 8.
	(M17NLIB_PATCH_LEVEL): Changed to 0.
	(M17NLIB_VERSION_NAME): Changed "1.8.0".

2017-12-09  handa  <handa@gnu.org>

	* font.c (mfont__set_spec_from_plist): Fix for buffer overrun (bug
	#50091).

2017-12-08  handa  <handa@gnu.org>

	* m17n-core.c (report_object_array): Check `objects' member
	before freeing it.
	(mdebug__register_object): Initialize `array' if `objects' member
	is null.

	* internal.h (M17N_OBJECT_UNREF): Call m17n_object_unref if
	MDEBUG_FINI is specified.

	* face.c (mface__init): Prepend a space to the name of Mface.

	* input.c (new_im_info): Add debug logging code.
	(free_im_info): Likewise.
	(minput__fini): Likewise.

2016-02-28  handa  <handa@gnu.org>

	* input.c (minput_parse_im_names): Fix a parsing bug of an input
	methods name that omits the
	language part.

2015-11-13  Paul Eggert  <eggert@cs.ucla.edu>

	Fix buffer overruns in run_stages index array
