@@ -21,7 +21,7 @@
    Boston, MA 02110-1301 USA.  */
 
 /***en
-    @addtogroup m17nFace
+    @addtogroup m17nFace Face
     @brief A face is an object to control appearance of M-text.
 
     A @e face is an object of the type #MFace and controls how to
@@ -49,7 +49,7 @@
     face is used.  */
 
 /***ja
-    @addtogroup m17nFace
+    @addtogroup m17nFace Face
     @brief フェースとは、M-text の見栄えを制御するオブジェクトである.
 
     @e フェース は #MFace 型のオブジェクトであり、M-text 
@@ -968,7 +968,7 @@ mface__update_frame_face (MFrame *frame)
 
 
 /* External API  */
-/*** @addtogroup m17nFace */
+/*** @addtogroup m17nFace Face */
 /*** @{ */
 /*=*/
 
@@ -2044,7 +2044,7 @@ mface_update (MFrame *frame, MFace *face)
 /*** @} */
 /*=*/
 
-/*** @addtogroup m17nDebug */
+/*** @addtogroup m17nDebug Debugging */
 /*** @{  */
 /*=*/
 
